-----------------------------------------------------------------------------------------------------------------------
 Prowide ISO 20022 - CHANGELOG
-----------------------------------------------------------------------------------------------------------------------

SNAPSHOT 9.2.1
  * (GH-26) Fixed AppHdr JSON conversion with explicit new namespace field as discriminator
  * (GH-24) Added a new MxWriteConfiguration and EscapeHandler API to tweak the serialization into XML

RELEASE 9.2.0 - May 2021
  * SWIFT Standard release update 2021 (live 22 November 2021)
  * Yearly revision of deprecation phase (see http://www.prowidesoftware.com/resources/deprecation-policy)

RELEASE 9.1.6 - April 2021
  * (GH-17|JIRA-506) Enhanced the XML format in the serializing, spaces and line breaks
  * (GH-18) Fixed NPE in json serialization/deserialization of XMLGregorianCalendar fractional second
  * Added customizable strategies to set the MxSwiftMessage metadata fields: reference, main amount, value date, etc...

RELEASE 9.1.5 - December 2020
  * (GH-8) (JR-428) Fixed parser to skip unbounded content such as the @XmlAnyElement(lax = true) elements used in many schemas for supplementary data

RELEASE 9.1.4 - November 2020
  * Fixed javadoc jar

RELEASE 9.1.3 - October 2020
  * Fixed pom file

RELEASE 9.1.2 - October 2020
  * Added AppHdrType enum and AppHdrFactory method to create headers with the enum as parameter
  * Added targetNamespace method to the AbstractMX
  * Internal SCM refactor for OS release
  * Revamped the parser implementation with SAX to avoid custom namespace preprocessing
  * Added AppHdrParser utility class
  * Removed the CopyableTo implementation from the generated model
  * Change the generic AbstractMX#parse to throw runtime exception when XML parameter is blank or null (same semantic as Mx classes parse method)

RELEASE 9.1.1 - September 2021
  * Removed blank lines in MX writer (marshalling)